--- a/3-CICD/src/index.html
+++ b/3-CICD/src/index.html
@@ -16,10 +16,10 @@
 	<table>
 		<tr>
 			<td>
-				<a href="https://github.com/0Emma0" target="_blank">
+				<a href="https://github.com/0Emma0/devops-challenge" target="_blank">
 				<img src="https://i.ibb.co/JQffJNX/github-169-1174970.png" style="width:256px;height:256px;" />
 				</a>
-				<h3 style="color: #ffffff">test-ci-02</h3>
+				<h3 style="color: #ffffff">test-ci-04</h3>
 			</td>
 		</tr>
 	</table>
